RESOLVED FIXED 60420
[Qt] Webkit2 PLUGIN_ARCHITECTURE(UNSUPPORTED) configuration broken by r85961
https://bugs.webkit.org/show_bug.cgi?id=60420
Summary [Qt] Webkit2 PLUGIN_ARCHITECTURE(UNSUPPORTED) configuration broken by r85961
Keith Kyzivat
Reported 2011-05-06 17:10:08 PDT
svn commit r85961 from bug 60285 broke the Webkit2 PLUGIN_ARCHITECTURE(UNSUPPORTED) configuration. platformVisibilityDidChange() was left without an implementation: g++ -Wl,--gc-sections -Wl,--no-undefined -Wl,-O1 -shared -Wl,-soname,libQtWebKit.so.4 -o libQtWebKit.so.4.9.0 obj/release/MathMLNames.o obj/release/MathMLElementFactory.o obj/release/SVGNames.o ... obj/release/moc_InspectorServerQt.o obj/release/moc_QtFallbackWebPopup.o obj/release/moc_qwkhistory.o obj/release/qrc_WebCore.o obj/release/qrc_WebKit.o obj/release/qrc_InspectorBackendStub.o -L../../WebKit2/release -L../../WebCore/release -L../../JavaScriptCore/release -L/usr/lib -lwebkit2 -lwebcore -ljscore -lsqlite3 -lphonon -lQtXmlPatterns -lQtGui -lQtNetwork -lQtCore -lpthread ../../WebKit2/release/libwebkit2.a(NetscapePlugin.o): In function `WebKit::NetscapePlugin::visibilityDidChange()': NetscapePlugin.cpp:(.text._ZN6WebKit14NetscapePlugin19visibilityDidChangeEv+0x0): undefined reference to `WebKit::NetscapePlugin::platformVisibilityDidChange()' collect2: ld returned 1 exit status make[1]: *** [../../lib/libQtWebKit.so.4.9.0] Error 1
Attachments
Patch (1.30 KB, patch)
2011-05-06 17:14 PDT, Keith Kyzivat
no flags
Keith Kyzivat
Comment 1 2011-05-06 17:14:25 PDT
WebKit Commit Bot
Comment 2 2011-05-07 07:33:48 PDT
The commit-queue encountered the following flaky tests while processing attachment 92661 [details]: http/tests/misc/favicon-loads-with-icon-loading-override.html bug 58412 (author: alice.liu@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2011-05-07 07:36:42 PDT
Comment on attachment 92661 [details] Patch Clearing flags on attachment: 92661 Committed r86006: <http://trac.webkit.org/changeset/86006>
WebKit Commit Bot
Comment 4 2011-05-07 07:36:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.