2011-05-07  Keith Kyzivat  <keith.kyzivat@nokia.com>

Reviewed by Adam Roben.

        [Qt] Webkit2 PLUGIN_ARCHITECTURE(UNSUPPORTED) configuration broken by r85961
        https://bugs.webkit.org/show_bug.cgi?id=60420

        * WebProcess/Plugins/Netscape/NetscapePluginNone.cpp:
        (WebKit::NetscapePlugin::platformVisibilityDidChange):

git-svn-id: svn://svn.chromium.org/blink/trunk@86006 bbb929c8-8fbe-4397-9dbb-9b2b20218538