third_party/WebKit/Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginNone.cpp
@@ -52,6 +52,10 @@ void NetscapePlugin::platformGeometryDidChange()
 {
 }
 
+void NetscapePlugin::platformVisibilityDidChange()
+{
+}
+
 void NetscapePlugin::platformPaint(GraphicsContext*, const IntRect&, bool)
 {
 }
